// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Warnings Error Should match text and count of errorSchedulingConflicts 1`] = `
<div>
  <h5>
    Novo agendamento não pode ocupar o mesmo periodo de outro já cadastrado
  </h5>
  <h6>
    Conflito(s) Identificado(s): 
    <strong>
      5
    </strong>
  </h6>
</div>
`;

exports[`Warnings Error Should match text of errorSchedulingEndBiggerThanStart 1`] = `
<div>
  <h5>
    Data inserida no campo 'Dia e horário de fim' deve ser menor que o 'Dia e horário de início'
  </h5>
  <h6>
    Favor selecionar horarios compatíveis... (Será considerado a partir de 1min)
  </h6>
</div>
`;

exports[`Warnings Error Should match text of errorSchedulingTitle 1`] = `
<div>
  <h5>
    Título precisa ter no mínimo 3 caracteres
  </h5>
</div>
`;
